--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ h1{
     position: relative;
     padding-top:  100px;
     height: 517px;
+    margin-right:auto;
 }
 .My-photo{
     margin: 50px auto 30px;
