--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ a{
     padding-top: 45px;
     margin-right: auto;
     margin-left: auto;
+    width: 100%;
 }
 .copyright{
     color:#EAF6F6;
