--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,8 @@ h1{
     position: relative;
     padding-top:  100px;
     height: 517px;
-    margin-right:auto;
-    margin-left:auto;
+    margin-right:0;
+    margin-left:0;
 }
 .My-photo{
     margin: 50px auto 30px;
