--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
+html,body{
+    overflow-x: hidden;
+}
+
 body{
     color: #40514E;
     margin:0;
     text-align:center;
     font-family: 'Merriweather', serif ;
-    
-    
 }
 
 ::-webkit-scrollbar {
